<resources>
    <string name="app_name">Ishi Smart Editor</string>
    <string name="share_your_thoughts_and_creativity">Share your Thoughts and Creativity</string>
    <string name="email_address">Email Address</string>
    <string name="log_in_now">Log in Now</string>
    <string name="reset_password">Reset Password</string>
    <string name="log_in">LOG IN</string>
    <string name="password">Password</string>
    <string name="reset_instructions">Please fill your registered Email Address. We will send you password reset instructions</string>
    <string name="reset">RESET</string>
    <string name="reset_instruction_sent">Password reset instructions has been sent to your email</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="last_name">Last Name</string>
    <string name="first_name">First Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="location">Location</string>
    <string name="organization_company">Organization / Company</string>
    <string name="short_description">Short Description</string>
    <string name="home">Home</string>
    <string name="message_title">MESSAGE TITLE</string>
    <string name="message_summary">MESSAGE SUMMARY</string>
    <string name="message">MESSAGE</string>
    <string name="profile_updated">Profile updated</string>
    <string name="required">Required</string>
    <string name="required_10">Required at least 10 words</string>
    <string name="required_25">Required at least 25 words</string>
    <string name="required_100">Required at least 100 words</string>
    <string name="my_activities">My Activities</string>
    <string name="creating_tea_message">Creating Morning Tea Message</string>
    <string name="please_wait">Please Wait</string>
    <string name="post_deleted_successfully">Post deleted successfully ..</string>
    <string name="something_went_wrong">Something went wrong</string>
    <string name="deleting_post">Deleting Post ..</string>
    <string name="no_poster_image_selected">No Poster Image selected</string>
    <string name="daily_poster">Daily Poster</string>
    <string name="poster_summary">Poster Summary </string>
    <string name="poster_sent">Daily Poster sent …</string>
    <string name="uploading_poster">"Uploading Poster … "</string>
    <string name="check_for_errors">Check for errors</string>
    <string name="tea_sent">Morning tea sent …</string>
    <string name="congrats_you_are_an_editor">Congrats you are an Editor, you can post your daily motivation posters and articles. Articles are only posted in the morning and motivation posters are posted at any time of the day</string>
    <string name="posters_activity_history_will_be_shown_here">Posters activity history will be shown here</string>
    <string name="daily_posters">Daily Posters</string>
    <string name="morning_tea_activity_history_will_be_shown_here">Morning tea activity history will be shown here</string>
    <string name="morning_tea">Morning Tea</string>
    <string name="you_can_only_post_in_the_morning">You can only post in the morning ..</string>
</resources>