<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/_10sdp"
    tools:context=".auth.SignIn">

    <com.google.android.material.button.MaterialButton
        android:id="@+id/back_btn"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_width="@dimen/_45sdp"
        android:layout_height="@dimen/_25sdp"
        android:layout_marginStart="@dimen/_5sdp"
        android:layout_marginTop="@dimen/_15sdp"
        android:insetLeft="0dp"
        android:insetTop="0dp"
        android:insetRight="0dp"
        android:insetBottom="0dp"
        android:padding="0dp"
        app:icon="@drawable/ic_back"
        app:iconGravity="textStart"
        app:iconPadding="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:shapeAppearanceOverlay="@style/OverlayButtonCircle" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/login_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:text="@string/log_in_now"
        android:textSize="@dimen/_14ssp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@id/back_btn"
        app:layout_constraintTop_toBottomOf="@+id/back_btn" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/phone_glasses_gif"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_120sdp"
        app:layout_constraintBottom_toTopOf="@id/email_address_input"
        app:layout_constraintTop_toBottomOf="@+id/login_title"
        app:srcCompat="@drawable/phone_glasses" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/email_address_input"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_10sdp"
        android:drawableStart="@drawable/ic_email"
        android:drawablePadding="@dimen/_8sdp"
        android:elevation="@dimen/_10sdp"
        android:hint="@string/email_address"
        android:inputType="textEmailAddress"
        app:layout_constraintBottom_toTopOf="@id/password_input" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/password_input"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_10sdp"
        android:drawableStart="@drawable/ic_lock"
        android:drawablePadding="@dimen/_8sdp"
        android:elevation="@dimen/_10sdp"
        android:hint="@string/password"
        android:inputType="textPassword"
        app:layout_constraintBottom_toTopOf="@id/login_btn" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/login_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_10sdp"
        android:text="@string/log_in"
        app:layout_constraintBottom_toTopOf="@+id/forgot_password_txt" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/forgot_password_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/_10sdp"
        android:padding="@dimen/_10sdp"
        android:text="@string/reset_password"
        android:textColor="@color/colorPrimary"
        android:textSize="@dimen/_12ssp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>