<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.EditProfile">

    <com.google.android.material.button.MaterialButton
        android:id="@+id/top_view"
        android:layout_width="@dimen/_50sdp"
        android:layout_height="@dimen/_12sdp"
        android:layout_margin="@dimen/_5sdp"
        android:enabled="false"
        app:cornerRadius="@dimen/_20sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/back_btn"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_width="@dimen/_35sdp"
        android:layout_height="@dimen/_35sdp"
        android:layout_marginStart="@dimen/_5sdp"
        android:insetLeft="0dp"
        android:insetTop="0dp"
        android:insetRight="0dp"
        android:insetBottom="0dp"
        android:padding="0dp"
        app:icon="@drawable/ic_back"
        app:iconGravity="textStart"
        app:iconPadding="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/top_view"
        app:shapeAppearanceOverlay="@style/OverlayButtonCircle" />


    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/my_profile_title"
        style="@style/TextAppearance.AppCompat.Subhead"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:text="@string/edit_profile"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@id/back_btn"
        app:layout_constraintEnd_toStartOf="@id/edit_update_btn"
        app:layout_constraintStart_toEndOf="@id/back_btn"
        app:layout_constraintTop_toTopOf="@id/back_btn" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/edit_update_btn"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_width="@dimen/_35sdp"
        android:layout_height="@dimen/_35sdp"
        android:layout_marginEnd="@dimen/_5sdp"
        android:insetLeft="0dp"
        android:insetTop="0dp"
        android:insetRight="0dp"
        android:insetBottom="0dp"
        android:padding="0dp"
        app:icon="@drawable/ic_add_check"
        app:iconGravity="textStart"
        app:iconPadding="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/top_view"
        app:shapeAppearanceOverlay="@style/OverlayButtonCircle" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="@id/edit_update_btn"
        app:layout_constraintStart_toStartOf="@id/back_btn"
        app:layout_constraintTop_toBottomOf="@id/back_btn">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/first_name_input"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_10sdp"
                android:drawableStart="@drawable/ic_person"
                android:drawablePadding="@dimen/_8sdp"
                android:elevation="@dimen/_10sdp"
                android:hint="@string/first_name"
                android:inputType="textPersonName"
                app:layout_constraintEnd_toStartOf="@id/last_name_input"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/last_name_input"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_10sdp"
                android:drawableStart="@drawable/ic_person"
                android:drawablePadding="@dimen/_8sdp"
                android:elevation="@dimen/_10sdp"
                android:hint="@string/last_name"
                android:inputType="textPersonName"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/first_name_input"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/email_address_input"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_10sdp"
                android:drawableStart="@drawable/ic_email"
                android:drawablePadding="@dimen/_8sdp"
                android:elevation="@dimen/_10sdp"
                android:hint="@string/email_address"
                android:inputType="textEmailAddress"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/first_name_input" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/phone_number_input"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_10sdp"
                android:drawableStart="@drawable/ic_phone_msg"
                android:drawablePadding="@dimen/_8sdp"
                android:elevation="@dimen/_10sdp"
                android:hint="@string/phone_number"
                android:inputType="phone"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/email_address_input" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/location_input"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_10sdp"
                android:drawableStart="@drawable/ic_location_on"
                android:drawablePadding="@dimen/_8sdp"
                android:elevation="@dimen/_10sdp"
                android:hint="@string/location"
                android:inputType="text"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/phone_number_input" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/organization_input"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_10sdp"
                android:drawableStart="@drawable/ic_location_city"
                android:drawablePadding="@dimen/_8sdp"
                android:elevation="@dimen/_10sdp"
                android:gravity="start"
                android:hint="@string/organization_company"
                android:maxLines="4"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/location_input" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/short_description_input"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_10sdp"
                android:drawableStart="@drawable/ic_dehaze"
                android:drawablePadding="@dimen/_8sdp"
                android:elevation="@dimen/_10sdp"
                android:gravity="start"
                android:hint="@string/short_description"
                android:maxLines="5"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/organization_input" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>