<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/_10sdp"
    tools:context=".auth.ResetPassword">

    <com.google.android.material.button.MaterialButton
        android:id="@+id/top_view"
        android:layout_width="@dimen/_50sdp"
        android:layout_height="@dimen/_12sdp"
        android:layout_margin="@dimen/_5sdp"
        android:enabled="false"
        app:cornerRadius="@dimen/_20sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/back_btn"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_width="@dimen/_35sdp"
        android:layout_height="@dimen/_35sdp"
        android:layout_marginStart="@dimen/_5sdp"
        android:insetLeft="0dp"
        android:insetTop="0dp"
        android:insetRight="0dp"
        android:insetBottom="0dp"
        android:padding="0dp"
        app:icon="@drawable/ic_back"
        app:iconGravity="textStart"
        app:iconPadding="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/top_view"
        app:shapeAppearanceOverlay="@style/OverlayButtonCircle" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/phone_glasses_gif"
        android:layout_width="@dimen/_200sdp"
        android:layout_height="@dimen/_100sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/back_btn"
        app:srcCompat="@drawable/phone_glasses" />

    <androidx.appcompat.widget.AppCompatImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_20sdp"
        android:layout_marginBottom="@dimen/_10sdp"
        android:src="@drawable/ic_restore"
        app:layout_constraintBottom_toBottomOf="@id/phone_glasses_gif"
        app:layout_constraintEnd_toEndOf="@id/phone_glasses_gif"
        app:layout_constraintStart_toStartOf="@id/phone_glasses_gif" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/reset_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:text="@string/reset_password"
        android:textSize="@dimen/_14ssp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/phone_glasses_gif" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/reset_instructions"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_10sdp"
        android:text="@string/reset_instructions"
        app:layout_constraintTop_toBottomOf="@+id/reset_title" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/email_address_input"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_10sdp"
        android:drawableStart="@drawable/ic_email"
        android:drawablePadding="@dimen/_8sdp"
        android:elevation="@dimen/_10sdp"
        android:hint="@string/email_address"
        android:inputType="textEmailAddress"
        app:layout_constraintTop_toBottomOf="@id/reset_instructions" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/send_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_10sdp"
        android:text="@string/reset"
        app:layout_constraintTop_toBottomOf="@+id/email_address_input" />

</androidx.constraintlayout.widget.ConstraintLayout>