<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.AddDailyPoster">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/top_view"
            android:layout_width="@dimen/_50sdp"
            android:layout_height="@dimen/_12sdp"
            android:layout_margin="@dimen/_5sdp"
            android:enabled="false"
            app:cornerRadius="@dimen/_20sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/back_btn"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="@dimen/_35sdp"
            android:layout_height="@dimen/_35sdp"
            android:layout_marginStart="@dimen/_5sdp"
            android:insetLeft="0dp"
            android:insetTop="0dp"
            android:insetRight="0dp"
            android:insetBottom="0dp"
            android:padding="0dp"
            app:icon="@drawable/ic_back"
            app:iconGravity="textStart"
            app:iconPadding="0dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/top_view"
            app:shapeAppearanceOverlay="@style/OverlayButtonCircle" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_10sdp"
            android:text="@string/daily_poster"
            style="@style/TextAppearance.AppCompat.Subhead"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@id/back_btn"
            app:layout_constraintStart_toEndOf="@id/back_btn"
            app:layout_constraintTop_toTopOf="@id/back_btn" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/submit_btn"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="@dimen/_35sdp"
            android:layout_height="@dimen/_35sdp"
            android:layout_marginEnd="@dimen/_5sdp"
            android:insetLeft="0dp"
            android:insetTop="0dp"
            android:insetRight="0dp"
            android:insetBottom="0dp"
            android:padding="0dp"
            app:icon="@drawable/ic_add_check"
            app:iconGravity="textStart"
            app:iconPadding="0dp"
            android:enabled="false"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/top_view"
            app:shapeAppearanceOverlay="@style/OverlayButtonCircle" />

        <View
            android:id="@+id/divider"
            style="@style/horizontal_divider"
            android:layout_width="0dp"
            android:layout_height="@dimen/_1sdp"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_5sdp"
            android:layout_marginEnd="@dimen/_10sdp"
            app:layout_constraintEnd_toEndOf="@id/submit_btn"
            app:layout_constraintStart_toStartOf="@id/back_btn"
            app:layout_constraintTop_toBottomOf="@id/back_btn" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/summary_inLayout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_5sdp"
            android:hint="@string/poster_summary"
            app:boxStrokeColor="@color/colorDivider"
            app:layout_constraintEnd_toEndOf="@id/submit_btn"
            app:layout_constraintStart_toStartOf="@id/back_btn"
            app:layout_constraintTop_toBottomOf="@id/divider">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/summary_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:maxLength="800"
                android:minLines="4"
                android:textSize="@dimen/_11ssp" />

        </com.google.android.material.textfield.TextInputLayout>

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/no_image_tv"
            style="@style/TextAppearance.AppCompat.Subhead"
            app:layout_constraintTop_toBottomOf="@id/summary_inLayout"
            app:layout_constraintStart_toStartOf="@id/back_btn"
            app:layout_constraintEnd_toEndOf="@id/submit_btn"
            android:layout_margin="@dimen/_10sdp"
            android:padding="@dimen/_10sdp"
            android:text="@string/no_poster_image_selected"
            android:textStyle="bold"/>

        <androidx.appcompat.widget.AppCompatImageButton
            android:layout_width="@dimen/_45sdp"
            android:layout_height="@dimen/_45sdp"
            android:id="@+id/pick_image"
            android:src="@drawable/ic_image"
            app:layout_constraintTop_toBottomOf="@id/no_image_tv"
            app:layout_constraintStart_toStartOf="@id/no_image_tv"
            app:layout_constraintEnd_toEndOf="@id/no_image_tv"/>

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/poster_image"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:layout_marginTop="@dimen/_10sdp"
            android:adjustViewBounds="true"
            android:scaleType="fitCenter"
            app:layout_constraintTop_toBottomOf="@id/pick_image" />

        <com.google.android.material.chip.Chip
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:id="@+id/remove_image_chip"
            app:chipIcon="@drawable/ic_cancel_filled"
            app:chipIconTint="@color/colorPrimary"
            app:chipStrokeColor="@color/colorPrimary"
            app:chipBackgroundColor="@color/primaryBg"
            app:chipStrokeWidth="@dimen/_1sdp"
            android:text="Remove Image"
            app:layout_constraintTop_toTopOf="@id/poster_image"
            app:layout_constraintEnd_toEndOf="@id/poster_image"
            android:layout_margin="@dimen/_5sdp" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>